# Zero-Knowledge-Proof-Framework

./: .gitignore  Cargo.toml  README.md  file.md  index.html
.github/workflows/: deploy.yml
assets/: index-BUl8csXp.css  index-Beit4Ens.js  index-DMtIrx0G.css  index-DkEUJXvk.css  index-UIhpU4Tf.js  index-fbV28w1O.css  index-mIcNFz62.css
crates/zkp-cli/: Cargo.toml
crates/zkp-cli/src/: main.rs
crates/zkp-core/: Cargo.toml
crates/zkp-core/benches/: proof_benchmarks.rs
crates/zkp-core/examples/: discrete_log_proof.rs  sudoku_proof.rs  wallet_ownership_proof.rs
crates/zkp-core/src/: commitment.rs  curve.rs  field.rs  lib.rs  prover.rs  sigma.rs  transcript.rs  verifier.rs
crates/zkp-core/src/circuit/: mod.rs  r1cs.rs  witness.rs
crates/zkp-core/src/dsl/: mod.rs  stdlib.rs
crates/zkp-wasm/: Cargo.toml
crates/zkp-wasm/src/: lib.rs
docs/: math-background.md  protocol-spec.md
visualizer/: index.html  package.json  vite.config.js
visualizer/src/: main.js
visualizer/src/styles/: index.css
