[package]
name = "zkp-cli"
version.workspace = true
edition.workspace = true
description = "CLI tool for the ZKP framework"

[[bin]]
name = "zkp"
path = "src/main.rs"

[dependencies]
zkp-core = { path = "../zkp-core" }
clap.workspace = true
colored.workspace = true
serde_json.workspace = true
rand.workspace = true
