[package]
name = "zkp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core ZKP library: field arithmetic, commitments, Sigma protocols, R1CS circuits, prover/verifier"

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-bn254.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "proof_benchmarks"
harness = false
